--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -65,7 +65,7 @@ lua_code_cache on;
         server_name  localhost;
 
         #charset koi8-r;
-
+	access_log off;
         #access_log  logs/host.access.log  main;
         set $proxy_pass_https_flag "false";
         location / {
